# ssl-ctc-finetuning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: exp_gt_hf.yaml  exp_pseudo_json_hf_audio.yaml  plot_compare.yaml  train_hf_audio_external_gt_json.yaml  train_hf_audio_pseudolabel_json.yaml  train_hf_dataset_text.yaml  train_local_manifest_text.yaml
deploy/nscc_pbs/: ctc_finetuning.pbs  ctc_finetuning_pseudolabel.pbs  eval_infer_hf.pbs
docs/: data_schema.md  run_guide.md
examples/manifests/: test.jsonl  train.jsonl  val.jsonl
examples/transcripts/: ground_truth.jsonl
legacy/ctc_finetuning/: eval_infer_hf.py  make_vocab.py  plot_compare_runs.py  train_asr.py
legacy/text_normalisation/: fillers.yaml  normalizer.py
pipeline/: README.md
pipeline/01_data_prep/: README.md
pipeline/02_train/: README.md
pipeline/03_eval/: README.md
runs/xlsr300m_gt/: resolved_config.yaml  train_command.sh
src/ctc_framework/cli/: build_vocab.py  eval.py  plot_compare.py  train.py
src/ctc_framework/config/: __init__.py  loader.py  schema.py
src/ctc_framework/pipelines/: __init__.py  common.py  eval_pipeline.py  plot_pipeline.py  train_pipeline.py  vocab_pipeline.py
src/ctc_framework/utils/: __init__.py  subprocess.py
